kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
  namespace: homework
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 8000
        command: ["/bin/bash", "-c"]
        args:
          - |
            cat <<EOF > /etc/nginx/nginx.conf
            events {}
            http {
              server {
                listen 8000;
                root /homework;
                index index.html;
              }
            }
            EOF
            nginx -g 'daemon off;'
        lifecycle:
            preStop:
              exec:
                command: ["rm", "/homework/index.html"]
        volumeMounts:
        - name: shared-volume
          mountPath: /homework
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
      dnsPolicy: Default
      volumes:
      - name: shared-volume
        emptyDir: {}
      nodeSelector:
        homework: "true"
